--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1939,6 +1939,10 @@ body {
   font-weight: normal;
 }
 
+.dir2 {
+    display: none;
+}
+
 /* Адаптация */
 @media (max-width: 1200px) {
   .title-block,
@@ -1978,8 +1982,30 @@ body {
 
   .description-block h3{
     font-size: 16px;
-    line-height: 25px;
+    line-height: 20px;
   }
+
+    .dir1 {
+     display: none;
+   }
+     .dir2 {
+     display: flex;
+     margin-top: 20px;
+   }
+
+     .top-section {
+     margin-bottom: 10px;
+   }
+   .info-block h3 {
+     font-size: 13px;
+   }
+   .bottom-section {
+     gap: 0px;
+   }
+   .director-info h3 {
+     font-weight: bold;
+     margin-bottom: 2px;
+   }
 }
 
 
